--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
     "chai": "^4.1.2",
     "chai-enzyme": "^0.8.0",
     "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
     "enzyme": "^2.9.1",
+    "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.4",
     "karma-webpack": "^2.0.4",
+    "postcss-loader": "^2.0.6",
     "react-dom": "^15.6.1",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   }
