--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postcss-loader": "^2.0.6",
     "react-dom": "^15.6.1",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.6.2",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   }
