--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "license": "MIT",
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-jss": "^8.2.1"
   },
   "devDependencies": {
     "@types/react": "^16.0.31",
@@ -41,19 +42,15 @@
     "chai": "^4.1.2",
     "chai-enzyme": "v1.0.0-beta.0",
     "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
-    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "karma-sourcemap-loader": "^0.3.7",
     "mocha": "^3.5.0",
     "mocha-webpack": "^1.0.1",
-    "postcss-loader": "^2.0.6",
     "semistandard": "^11.0.0",
     "snazzy": "^7.0.0",
-    "style-loader": "^0.18.2",
     "url-loader": "^0.6.2",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
