--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "html-webpack-plugin": "^2.30.1",
     "mocha": "^3.5.0",
     "mocha-webpack": "^1.0.1",
+    "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.6",
+    "sass-loader": "^6.0.6",
     "semistandard": "^11.0.0",
     "snazzy": "^7.0.0",
     "style-loader": "^0.18.2",
