--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "html-webpack-plugin": "^2.30.1",
     "mocha": "^3.5.0",
     "mocha-webpack": "^1.0.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.6",
     "semistandard": "^11.0.0",
     "snazzy": "^7.0.0",
