--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "start": "gulp -f ./config/gulpfile.js dev",
     "build": "cross-env NODE_ENV=production gulp -f ./config/gulpfile.js build",
-    "lint": "semistandard --env mocha --verbose | snazzy",
-    "format": "semistandard --env mocha --fix --verbose | snazzy",
+    "lint": "eslint ./",
+    "format": "eslint ./ --fix",
     "test": "mocha-webpack --include ./test/utils/setup.js \"src/**/*.spec.js\""
   },
   "keywords": [
@@ -31,7 +31,7 @@
     "@types/react": "^16.0.31",
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.1.2",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -46,6 +46,15 @@
     "del": "^3.0.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
+    "eslint": "^4.16.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-config-standard-jsx": "^4.0.2",
+    "eslint-plugin-class-property": "^1.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.6",
     "gulp": "^4.0.0",
@@ -57,19 +66,11 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.6",
-    "semistandard": "^11.0.0",
-    "snazzy": "^7.0.0",
     "style-loader": "^0.18.2",
     "sw-precache": "^5.2.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-merge": "^4.1.1",
     "webpack-stream": "^4.0.0"
-  },
-  "semistandard": {
-    "parser": "babel-eslint",
-    "ignore": [
-      "dist"
-    ]
   }
 }
